--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "html5-qrcode": "^2.3.8",
+    "jose": "^6.1.3",
     "next": "14.1.0",
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.4",
     "prisma": "^5.10.2"
   }
 }
