--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "html2pdf.js": "^0.14.0",
     "html5-qrcode": "^2.3.8",
     "jose": "^6.1.3",
     "next": "14.1.0",
